refactor: 处理 DefaultFileSystem 的编辑器 NPE 警告